Fix whitespace bug and change api flow

--- a/RandomQuoteMachine/styles/styles.sass
+++ b/RandomQuoteMachine/styles/styles.sass
@@ -9,21 +9,16 @@ body
   margin: 0
   height: 100%
   overflow: auto
-  background-color: black
   font-family: -apple-system, BlinkMacSystemFont, sans-serif
 
 #main
-  background-color: none
   min-height: 100vh
-  // Add quote-box padding and then remove quote-box padding
-  padding-left: 20px
-  padding-right: 20px
   display: flex
   justify-content: center
   align-items: center
 
 #quote-box
-  padding: 30px 40px 30px 40px
+  padding: 20px 10px 20px 10px
   color: white
   display: none
 
@@ -72,6 +67,9 @@ i
 
 
 @media only screen and (min-width: 1024px)
+
+  #quote-box
+    padding: 30px 60px 30px 60px
 
   #text
     font-size: 64px
